--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,25 +6,26 @@ import MenuIcon from './icons/MenuIcon.astro'
 import Search from '@/components/Search'
 import TagIcon from './icons/TagIcon.astro'
 import ToggleTheme from './ToggleTheme.astro'
+import LinkedinIcon from './icons/linkedinIcon.astro'
 
 // ADD YOUR SOCIAL NETWORKS HERE
 const SOCIALNETWORKS = [
 	{
 		name: 'Github',
-		url: 'https://github.com/danielcgilibert/blog-template',
+		url: 'https://github.com/cozyan',
 		icon: GithubIcon
-	},
-
-	{
-		name: 'Twitter',
-		url: 'https://github.com/danielcgilibert/blog-template',
-		icon: TwitterIcon
 	}
+
+	// {
+	// 	name: 'LinkedIn',
+	// 	url: 'https://www.linkedin.com/in/gemma-liang/',
+	// 	icon: LinkedinIcon
+	// }
 ]
 ---
 
 <header class='relative flex items-center h-12 font-semibold'>
-	<a class='text-lg mr-auto' href='/'>Home</a>
+	<a class='text-lg mr-auto' href='/'>Home 🏠</a>
 
 	<div
 		id='astro-header-drawer'
