--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,6 +11,7 @@ const { title, description, image, articleDate } = Astro.props
 
 <html lang='en' class='scroll-smooth'>
 	<head>
+		<meta charset='UTF-8' />
 		<BaseHead title={title} description={description} ogImage={image} articleDate={articleDate} />
 		<ProviderTheme />
 		<ProviderAnimations />
