--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,28 @@ const MAX_POSTS = 5 // max number of posts to show on the home page
 const posts = await getPosts(MAX_POSTS)
 ---
 
+<style>
+	.fancy-p {
+		padding: 1em;
+		border: 1px dashed #ccc;
+		color: #333;
+		transition: all 0.3s ease;
+	}
+
+	.fancy-p:hover {
+		color: #666;
+		border-color: #999;
+	}
+</style>
+
 <BaseLayout title='Home'>
-	<TitlePage title='Blog Title' />
+	<TitlePage title="Cozyan's Canvas 🎨" />
+	<p class='fancy-p'>
+		Hi! 👋 I'm Cozyan, just a regular person navigating the ups and downs of tech 🖥️, life's
+		rollercoasters, and the ever-twisting world of finance. <br />
+		 At Cozyan's Canvas 🎨, I share my stories and discoveries, all served with a dash of humor and
+		a slice of beef 🥩 for relatability 😊.
+	</p>
 	<ListCategories />
 
 	<div>
