--- a/src/components/mdx/Code.astro
+++ b/src/components/mdx/Code.astro
@@ -4,7 +4,7 @@ import CheckIcon from '../icons/CheckIcon.astro'
 ---
 
 <pre
-	class='relative shadow-2xl dark:bg-slate-800 code'><button aria-label="copy-button" class="copy-button absolute  z-20 top-2 right-2  rounded-md transition-all ease-in max-w-full max-h-fit hover:text-indigo-400"><CopyIcon /></button><span class="check-span absolute z-10 top-2 right-2  rounded-md transition-all ease-in opacity-0 text-green-300 max-w-full max-h-fit "><CheckIcon /></span><slot /></pre>
+	class='relative shadow-base dark:bg-slate-800 code'><button aria-label="copy-button" class="copy-button absolute  z-20 top-2 right-2  rounded-md transition-all ease-in max-w-full max-h-fit hover:text-indigo-400"><CopyIcon /></button><span class="check-span absolute z-10 top-2 right-2  rounded-md transition-all ease-in opacity-0 text-green-300 max-w-full max-h-fit "><CheckIcon /></span><slot /></pre>
 
 <script>
 	const coppyBlock = () => {
