--- a/themes/PaperMod/layouts/partials/comments.html
+++ b/themes/PaperMod/layouts/partials/comments.html
@@ -1,3 +1,17 @@
-{{- /* Comments area start */ -}}
-{{- /* to add comments read => https://gohugo.io/content-management/comments/ */ -}}
-{{- /* Comments area end */ -}}
+<div id="gitalk-container"></div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+
+<script>
+const gitalk = new Gitalk({
+  clientID: '{{ .Site.Params.gitalk.clientId }}',
+  clientSecret: '{{ .Site.Params.gitalk.clientSecret }}',
+  repo: '{{ .Site.Params.gitalk.repo }}',
+  owner: '{{ .Site.Params.gitalk.owner }}',
+  admin: ['{{ .Site.Params.gitalk.owner }}'],
+  id: location.pathname,      // Ensure uniqueness and length less than 50
+  distractionFreeMode: false // Facebook-like distraction free mode
+})
+
+gitalk.render('gitalk-container')
+</script>
