--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -105,3 +105,8 @@ body {
     color: var(--code-bg);
     transition: color 0.3s ease;
 }
+
+.header {
+    border-bottom: 1px solid var(--border);
+    background-color: var(--border);
+}
