--- a/themes/PaperMod/layouts/partials/comments.html
+++ b/themes/PaperMod/layouts/partials/comments.html
@@ -1,16 +1,16 @@
-<div id="gitalk-container"></div>
-<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-<script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
-<script>
-const gitalk = new Gitalk({
-  clientID: '{{ .Site.Params.gitalk.clientId }}',
-  clientSecret: '{{ .Site.Params.gitalk.clientSecret }}',
-  repo: '{{ .Site.Params.gitalk.repo }}',
-  owner: '{{ .Site.Params.gitalk.owner }}',
-  admin: ['{{ .Site.Params.gitalk.owner }}'],
-  id: location.pathname,      // Ensure uniqueness and length less than 50
-  distractionFreeMode: false // Facebook-like distraction free mode
-})
-
-gitalk.render('gitalk-container')
+<div id="gitscus"></div>
+<script src="https://giscus.app/client.js"
+        data-repo="cozyan/site-comment-git"
+        data-repo-id="R_kgDONRSxdg"
+        data-category="General"
+        data-category-id="DIC_kwDONRSxds4CkYcn"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
 </script>
