add google analytics

--- a/themes/PaperMod/layouts/partials/head.html
+++ b/themes/PaperMod/layouts/partials/head.html
@@ -155,3 +155,16 @@
 {{- template "partials/templates/twitter_cards.html" . }}
 {{- template "partials/templates/schema_json.html" . }}
 {{- end -}}
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W02F5BM27Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W02F5BM27Q');
+</script>
+
+<!-- Google Search Console verification -->
+<meta name="google-site-verification" content="EZkQ2kjveTiffXyslGKsoz1pnbIR7DTAhatwUQ_kTWo" />
