--- a/themes/PaperMod/layouts/_default/_markup/render-image.html
+++ b/themes/PaperMod/layouts/_default/_markup/render-image.html
@@ -2,13 +2,14 @@
 {{- $src := $u.String -}}
 {{- if not $u.IsAbs -}}
   {{- $path := strings.TrimPrefix "./" $u.Path }}
-  {{- with or (.PageInner.Resources.Get $path) (resources.Get $path) -}}
-    {{- $src = .RelPermalink -}}
-    {{- with $u.RawQuery -}}
-      {{- $src = printf "%s?%s" $src . -}}
+  {{- if hasPrefix $path "assets/" -}}
+    {{- $resourcePath := strings.TrimPrefix "assets/" $path -}}
+    {{- with resources.Get $resourcePath -}}
+      {{- $src = .RelPermalink -}}
     {{- end -}}
-    {{- with $u.Fragment -}}
-      {{- $src = printf "%s#%s" $src . -}}
+  {{- else -}}
+    {{- with or (.PageInner.Resources.Get $path) (resources.Get $path) -}}
+      {{- $src = .RelPermalink -}}
     {{- end -}}
   {{- end -}}
 {{- end -}}
